# upset

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: arguments.rs  command.rs  configuration.rs  main.rs  terminal_output.rs
src/commands/: git_command.rs  mod.rs  wget_command.rs  winget_command.rs
src/file_download/: file_download.rs  file_download_factory.rs  mod.rs  wget_file_download.rs
src/file_reader/: mod.rs  yaml_file_reader.rs
src/package_manager/: installation_status.rs  mod.rs  package_manager.rs  package_manager_factory.rs  winget_package_manager.rs
src/parser/: mod.rs  parser.rs  parser_factory.rs  version_100_parser.rs
src/terminal/: mod.rs  spinner_terminal_output.rs  terminal_output.rs  terminal_output_factory.rs
src/version_control/: download_status.rs  git_version_control_system.rs  mod.rs  version_control_system.rs  version_control_system_factory.rs
